# OpenGL-Rendering

./: CMakeLists.txt  Makefile  README.md
src/: CMakeLists.txt  main.c  main.cpp  window.cpp  window.hpp
